fix layout problem

--- a/web/themes/custom/ethicscompliance/css/ethicscompliance.css
+++ b/web/themes/custom/ethicscompliance/css/ethicscompliance.css
@@ -565,7 +565,7 @@ body h6 {
   padding-top: 20px;
 }
 
-.feature-topic-section .layout__region--content {
+.feature-topic-section .layout__region--content .block {
   border: 2px solid #A4925A;
   margin: 0 16px;
   padding: 20px;
